# yt_dlp_async

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  docker.md  run-in-docker.sh
docs/: database.md  db_schema.md  e_events.md  metadata.md  utils.md  video_download.md  video_file.md  video_id.md  video_metadata.md
yt-dlp-async/: .env  database.py  db_schema.sql  e_events.py  metadata.py  utils.py  video_download.py  video_file.py  video_id.py  video_metadata.py
yt_dlp_async/: database.py  db_schema.sql  e_events.py  logger_config.py  metadata.py  utils.py  video_download.py  video_file.py  video_id.py  video_metadata.py
